--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html lang="pt-br>
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="pt-br">
+  <head>
+    <link rel="stylesheet" href="styles/pages/index.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | Netflix</title>
-</head>
-<body>
-    <h1>Bem vindo à página Home da Netflix!</h1>
-</body>
+  </head>
+  <body>
+    <div class="status-bar">
+      <p class="status-bar__time">9:41</p>
+      <div class="status-bar__icons">
+        <img src="assets/icons/cellular-connection.svg" alt="Conexão Celular" />
+        <img src="assets/icons/wifi.svg" alt="Wifi" />
+        <img
+          class="status-bar__battery"
+          src="assets/icons/battery.svg"
+          alt="Bateria"
+        />
+      </div>
+    </div>
+  </body>
 </html>
