--- a/index.html
+++ b/index.html
@@ -20,5 +20,32 @@
         />
       </div>
     </div>
+    <div class="bottom-navbar__background">
+      <div class="bottom-navbar">
+        <div class="bottom-navbar__button">
+          <img src="assets/icons/home.svg" alt="Home" />
+          <p class="bottom-navbar__text">Home</p>
+        </div>
+        <div class="bottom-navbar__button">
+          <img src="assets/icons/search.svg" alt="Pesquisa" />
+          <p class="bottom-navbar__text">Search</p>
+        </div>
+        <div
+          data-notification="4"
+          class="bottom-navbar__button bottom-navbar__button--notification"
+        >
+          <img src="assets/icons/coming-soon.svg" alt="Em Breve" />
+          <p class="bottom-navbar__text">Coming Soon</p>
+        </div>
+        <div class="bottom-navbar__button">
+          <img src="assets/icons/downloads.svg" alt="Downloads" />
+          <p class="bottom-navbar__text">Downloads</p>
+        </div>
+        <div class="bottom-navbar__button">
+          <img src="assets/icons/more.svg" alt="Mais" />
+          <p class="bottom-navbar__text">More</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
