--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
         />
       </div>
     </div>
+
     <div class="bottom-navbar__background">
       <div class="bottom-navbar">
         <div class="bottom-navbar__button">
-          <img src="assets/icons/home.svg" alt="Home" />
-          <p class="bottom-navbar__text">Home</p>
+          <img src="assets/icons/home-active.svg" alt="Home" />
+          <p class="bottom-navbar__text bottom-navbar__text--active">Home</p>
         </div>
         <div class="bottom-navbar__button">
           <img src="assets/icons/search.svg" alt="Pesquisa" />
