feat: implement movie list component

--- a/index.html
+++ b/index.html
@@ -21,6 +21,75 @@
       </div>
     </div>
 
+    <div class="movie-list" style="margin-bottom: 10px">
+      <img
+        class="movie-list__img movie-list__img--rounded"
+        src="assets/images/movie1.png"
+        alt="Lucifer"
+      />
+      <img
+        class="movie-list__img movie-list__img--rounded"
+        src="assets/images/movie3.png"
+        alt="Oloture"
+      />
+      <img
+        class="movie-list__img movie-list__img--rounded"
+        src="assets/images/movie2.png"
+        alt="The Princess Switch Switched Again"
+      />
+      <img
+        class="movie-list__img movie-list__img--rounded"
+        src="assets/images/movie4.png"
+        alt="The Blacklist"
+      />
+    </div>
+
+    <div class="movie-list" style="margin-bottom: 10px">
+      <img
+        class="movie-list__img"
+        src="assets/images/movie2.png"
+        alt="The Princess Switch Switched Again"
+      />
+      <img
+        class="movie-list__img"
+        src="assets/images/movie3.png"
+        alt="Oloture"
+      />
+      <img
+        class="movie-list__img"
+        src="assets/images/movie4.png"
+        alt="The Blacklist"
+      />
+      <img
+        class="movie-list__img"
+        src="assets/images/movie1.png"
+        alt="Lucifer"
+      />
+    </div>
+
+    <div class="movie-list" style="margin-bottom: 10px">
+      <img
+        class="movie-list__img movie-list__img--big"
+        src="assets/images/movie2.png"
+        alt="The Princess Switch Switched Again"
+      />
+      <img
+        class="movie-list__img movie-list__img--big"
+        src="assets/images/movie1.png"
+        alt="Lucifer"
+      />
+      <img
+        class="movie-list__img movie-list__img--big"
+        src="assets/images/movie3.png"
+        alt="Oloture"
+      />
+      <img
+        class="movie-list__img movie-list__img--big"
+        src="assets/images/movie4.png"
+        alt="The Blacklist"
+      />
+    </div>
+
     <div class="bottom-navbar__background">
       <div class="bottom-navbar">
         <div class="bottom-navbar__button">
