feat: implement navbar component

--- a/index.html
+++ b/index.html
@@ -21,7 +21,20 @@
       </div>
     </div>
 
-    <div class="movie-list" style="margin-bottom: 10px">
+    <div class="navbar" style="margin-bottom: 10px">
+      <a href=".">
+        <img
+          class="navbar__logo"
+          src="assets/images/logo-netflix.png"
+          alt="Netflix"
+        />
+      </a>
+      <a class="navbar__link" href="#">TV Shows</a>
+      <a class="navbar__link" href="#">Movies</a>
+      <a class="navbar__link" href="#">My List</a>
+    </div>
+
+    <div class="movie-list" style="margin-bottom: 20px">
       <img
         class="movie-list__img movie-list__img--rounded"
         src="assets/images/movie1.png"
