feat: implement play component

--- a/index.html
+++ b/index.html
@@ -34,6 +34,35 @@
       <a class="navbar__link" href="#">My List</a>
     </div>
 
+    <div class="play" style="margin-bottom: 20px">
+      <div class="play__top-ten">
+        <img class="play__img" src="assets/images/top10.png" alt="Top 10" />
+        <p class="play__title">#3 in Brazil Today</p>
+      </div>
+      <div class="play__controls">
+        <a class="play__link" href="#">
+          <img
+            class="play__icon"
+            src="assets/icons/plus.svg"
+            alt="Minha Lista"
+          />
+          <p class="play__text">My List</p>
+        </a>
+        <button class="play__btn">
+          <img class="play__icon--btn" src="assets/icons/play.svg" alt="Play" />
+          Play
+        </button>
+        <a class="play__link" href="#">
+          <img
+            class="play__icon"
+            src="assets/icons/info.svg"
+            alt="Mais Informações"
+          />
+          <p class="play__text">Info</p>
+        </a>
+      </div>
+    </div>
+
     <div class="movie-list" style="margin-bottom: 20px">
       <img
         class="movie-list__img movie-list__img--rounded"
