--- a/index.html
+++ b/index.html
@@ -63,6 +63,88 @@
       </div>
     </div>
 
+    <div class="search-movies">
+      <div class="search-movie__background" style="margin-bottom: 3px">
+        <div class="search-movie">
+          <img
+            class="search-movie__img"
+            src="assets/images/search-movie1.png"
+            alt="Ozark"
+          />
+          <div class="search-movie__content">
+            <h1 class="search-movie__title">Ozark</h1>
+            <a href="#">
+              <img
+                class="search-movie__play"
+                src="assets/icons/play-circle.svg"
+                alt="Play"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="search-movie__background" style="margin-bottom: 3px">
+        <div class="search-movie">
+          <img
+            class="search-movie__img"
+            src="assets/images/search-movie2.png"
+            alt="The Governator"
+          />
+          <div class="search-movie__content">
+            <h1 class="search-movie__title">The Governator</h1>
+            <a href="#">
+              <img
+                class="search-movie__play"
+                src="assets/icons/play-circle.svg"
+                alt="Play"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="search-movie__background" style="margin-bottom: 3px">
+        <div class="search-movie">
+          <img
+            class="search-movie__img"
+            src="assets/images/search-movie3.png"
+            alt="Breaking Bad"
+          />
+          <div class="search-movie__content">
+            <h1 class="search-movie__title">Breaking Bad</h1>
+            <a href="#">
+              <img
+                class="search-movie__play"
+                src="assets/icons/play-circle.svg"
+                alt="Play"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="search-movie__background" style="margin-bottom: 20px">
+        <div class="search-movie">
+          <img
+            class="search-movie__img"
+            src="assets/images/search-movie4.png"
+            alt="Citation"
+          />
+          <div class="search-movie__content">
+            <h1 class="search-movie__title">Citation</h1>
+            <a href="#">
+              <img
+                class="search-movie__play"
+                src="assets/icons/play-circle.svg"
+                alt="Play"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="movie-list" style="margin-bottom: 20px">
       <img
         class="movie-list__img movie-list__img--rounded"
