--- a/user.html
+++ b/user.html
@@ -55,7 +55,46 @@
         <h2 class="profile-list__text">Kids</h2>
       </a>
       <a class="profile-list__item profile-list__item--add">
-        <img src="assets/icons/plus-square.svg" alt="Adicionar" />
+        <img src="assets/icons/plus-square.svg" alt="Adicionar perfil" />
+      </a>
+    </div>
+
+    <div class="profile-list--grid">
+      <a class="profile-list__item profile-list__item--active">
+        <img
+          class="profile-list__img--big"
+          src="assets/images/profile1.png"
+          alt="Emenalo"
+        />
+        <h2 class="profile-list__text">Emenalo</h2>
+      </a>
+      <a class="profile-list__item">
+        <img
+          class="profile-list__img--big"
+          src="assets/images/profile2.png"
+          alt="Emenalo"
+        />
+        <h2 class="profile-list__text">Thelma</h2>
+      </a>
+      <a class="profile-list__item">
+        <img
+          class="profile-list__img--big"
+          src="assets/images/profile3.png"
+          alt="Emenalo"
+        />
+        <h2 class="profile-list__text">Onyeka</h2>
+      </a>
+      <a class="profile-list__item">
+        <img
+          class="profile-list__img--big"
+          src="assets/images/profile-kids.png"
+          alt="Emenalo"
+        />
+        <h2 class="profile-list__text">Kids</h2>
+      </a>
+      <a class="profile-list__item profile-list__item--add-grid">
+        <img src="assets/icons/plus-circle2.svg" alt="Adicionar perfil" />
+        <h2 class="profile-list__text">Add Profile</h2>
       </a>
     </div>
   </body>
