feat: implement user page loading animation

--- a/user.html
+++ b/user.html
@@ -21,89 +21,91 @@
       </div>
     </div>
 
-    <div class="profile-list" style="margin-bottom: 30px">
-      <a class="profile-list__item profile-list__item">
-        <img
-          class="profile-list__img"
-          src="assets/images/profile1.png"
-          alt="Emenalo"
-        />
-        <h2 class="profile-list__text">Emenalo</h2>
-      </a>
-      <a class="profile-list__item">
-        <img
-          class="profile-list__img"
-          src="assets/images/profile2.png"
-          alt="Emenalo"
-        />
-        <h2 class="profile-list__text">Thelma</h2>
-      </a>
-      <a class="profile-list__item">
-        <img
-          class="profile-list__img"
-          src="assets/images/profile3.png"
-          alt="Emenalo"
-        />
-        <h2 class="profile-list__text">Onyeka</h2>
-      </a>
-      <a class="profile-list__item">
-        <img
-          class="profile-list__img"
-          src="assets/images/profile-kids.png"
-          alt="Emenalo"
-        />
-        <h2 class="profile-list__text">Kids</h2>
-      </a>
-      <a class="profile-list__item profile-list__item--add">
-        <img
-          class="profile-list__img"
-          src="assets/icons/plus-square.svg"
-          alt="Adicionar perfil"
-        />
-      </a>
-    </div>
+    <div id="animation">
+      <div class="profile-list" style="margin-bottom: 30px">
+        <a class="profile-list__item profile-list__item">
+          <img
+            class="profile-list__img"
+            src="assets/images/profile1.png"
+            alt="Emenalo"
+          />
+          <h2 class="profile-list__text">Emenalo</h2>
+        </a>
+        <a class="profile-list__item">
+          <img
+            class="profile-list__img"
+            src="assets/images/profile2.png"
+            alt="Emenalo"
+          />
+          <h2 class="profile-list__text">Thelma</h2>
+        </a>
+        <a class="profile-list__item">
+          <img
+            class="profile-list__img"
+            src="assets/images/profile3.png"
+            alt="Emenalo"
+          />
+          <h2 class="profile-list__text">Onyeka</h2>
+        </a>
+        <a class="profile-list__item">
+          <img
+            class="profile-list__img"
+            src="assets/images/profile-kids.png"
+            alt="Emenalo"
+          />
+          <h2 class="profile-list__text">Kids</h2>
+        </a>
+        <a class="profile-list__item profile-list__item--add">
+          <img
+            class="profile-list__img"
+            src="assets/icons/plus-square.svg"
+            alt="Adicionar perfil"
+          />
+        </a>
+      </div>
 
-    <div class="profile-list--grid">
-      <a class="profile-list__item">
-        <img
-          class="profile-list__img profile-list__img--big"
-          src="assets/images/profile1.png"
-          alt="Emenalo"
-        />
-        <h2 class="profile-list__text">Emenalo</h2>
-      </a>
-      <a class="profile-list__item">
-        <img
-          class="profile-list__img profile-list__img--big"
-          src="assets/images/profile2.png"
-          alt="Emenalo"
-        />
-        <h2 class="profile-list__text">Thelma</h2>
-      </a>
-      <a class="profile-list__item">
-        <img
-          class="profile-list__img profile-list__img--big"
-          src="assets/images/profile3.png"
-          alt="Emenalo"
-        />
-        <h2 class="profile-list__text">Onyeka</h2>
-      </a>
-      <a class="profile-list__item">
-        <img
-          class="profile-list__img profile-list__img--big"
-          src="assets/images/profile-kids.png"
-          alt="Emenalo"
-        />
-        <h2 class="profile-list__text">Kids</h2>
-      </a>
-      <a class="profile-list__item profile-list__item--add-grid">
-        <img
-          class="profile-list__img"
-          src="assets/icons/plus-circle2.svg"
-          alt="Adicionar perfil"
-        />
-        <h2 class="profile-list__text">Add Profile</h2>
-      </a>
+      <div class="profile-list--grid">
+        <a class="profile-list__item">
+          <img
+            class="profile-list__img profile-list__img--big"
+            src="assets/images/profile1.png"
+            alt="Emenalo"
+          />
+          <h2 class="profile-list__text">Emenalo</h2>
+        </a>
+        <a class="profile-list__item">
+          <img
+            class="profile-list__img profile-list__img--big"
+            src="assets/images/profile2.png"
+            alt="Emenalo"
+          />
+          <h2 class="profile-list__text">Thelma</h2>
+        </a>
+        <a class="profile-list__item">
+          <img
+            class="profile-list__img profile-list__img--big"
+            src="assets/images/profile3.png"
+            alt="Emenalo"
+          />
+          <h2 class="profile-list__text">Onyeka</h2>
+        </a>
+        <a class="profile-list__item">
+          <img
+            class="profile-list__img profile-list__img--big"
+            src="assets/images/profile-kids.png"
+            alt="Emenalo"
+          />
+          <h2 class="profile-list__text">Kids</h2>
+        </a>
+        <a class="profile-list__item profile-list__item--add-grid">
+          <img
+            class="profile-list__img"
+            src="assets/icons/plus-circle2.svg"
+            alt="Adicionar perfil"
+          />
+          <h2 class="profile-list__text">Add Profile</h2>
+        </a>
+      </div>
     </div>
   </body>
 </html>
