--- a/user.html
+++ b/user.html
@@ -8,104 +8,121 @@
     <title>Usuário | Netflix</title>
   </head>
   <body>
-    <div class="status-bar">
-      <p class="status-bar__time">9:41</p>
-      <div class="status-bar__icons">
-        <img src="assets/icons/cellular-connection.svg" alt="Conexão Celular" />
-        <img src="assets/icons/wifi.svg" alt="Wifi" />
-        <img
-          class="status-bar__battery"
-          src="assets/icons/battery.svg"
-          alt="Bateria"
-        />
+    <div id="page-content">
+      <div class="status-bar">
+        <p class="status-bar__time">9:41</p>
+        <div class="status-bar__icons">
+          <img
+            src="assets/icons/cellular-connection.svg"
+            alt="Conexão Celular"
+          />
+          <img src="assets/icons/wifi.svg" alt="Wifi" />
+          <img
+            class="status-bar__battery"
+            src="assets/icons/battery.svg"
+            alt="Bateria"
+          />
+        </div>
+      </div>
+
+      <div id="animation">
+        <div class="profile-list" style="margin-bottom: 30px">
+          <a class="profile-list__item profile-list__item">
+            <img
+              class="profile-list__img"
+              src="assets/images/profile1.png"
+              alt="Emenalo"
+            />
+            <h2 class="profile-list__text">Emenalo</h2>
+          </a>
+          <a class="profile-list__item">
+            <img
+              class="profile-list__img"
+              src="assets/images/profile2.png"
+              alt="Emenalo"
+            />
+            <h2 class="profile-list__text">Thelma</h2>
+          </a>
+          <a class="profile-list__item">
+            <img
+              class="profile-list__img"
+              src="assets/images/profile3.png"
+              alt="Emenalo"
+            />
+            <h2 class="profile-list__text">Onyeka</h2>
+          </a>
+          <a class="profile-list__item">
+            <img
+              class="profile-list__img"
+              src="assets/images/profile-kids.png"
+              alt="Emenalo"
+            />
+            <h2 class="profile-list__text">Kids</h2>
+          </a>
+          <a class="profile-list__item profile-list__item--add">
+            <img
+              class="profile-list__img"
+              src="assets/icons/plus-square.svg"
+              alt="Adicionar perfil"
+            />
+          </a>
+        </div>
+
+        <div class="profile-list--grid">
+          <a class="profile-list__item">
+            <img
+              class="profile-list__img profile-list__img--big"
+              src="assets/images/profile1.png"
+              alt="Emenalo"
+            />
+            <h2 class="profile-list__text">Emenalo</h2>
+          </a>
+          <a class="profile-list__item">
+            <img
+              class="profile-list__img profile-list__img--big"
+              src="assets/images/profile2.png"
+              alt="Emenalo"
+            />
+            <h2 class="profile-list__text">Thelma</h2>
+          </a>
+          <a class="profile-list__item">
+            <img
+              class="profile-list__img profile-list__img--big"
+              src="assets/images/profile3.png"
+              alt="Emenalo"
+            />
+            <h2 class="profile-list__text">Onyeka</h2>
+          </a>
+          <a class="profile-list__item">
+            <img
+              class="profile-list__img profile-list__img--big"
+              src="assets/images/profile-kids.png"
+              alt="Emenalo"
+            />
+            <h2 class="profile-list__text">Kids</h2>
+          </a>
+          <a class="profile-list__item profile-list__item--add-grid">
+            <img
+              class="profile-list__img"
+              src="assets/icons/plus-circle2.svg"
+              alt="Adicionar perfil"
+            />
+            <h2 class="profile-list__text">Add Profile</h2>
+          </a>
+        </div>
       </div>
     </div>
 
-    <div id="animation">
-      <div class="profile-list" style="margin-bottom: 30px">
-        <a class="profile-list__item profile-list__item">
-          <img
-            class="profile-list__img"
-            src="assets/images/profile1.png"
-            alt="Emenalo"
-          />
-          <h2 class="profile-list__text">Emenalo</h2>
-        </a>
-        <a class="profile-list__item">
-          <img
-            class="profile-list__img"
-            src="assets/images/profile2.png"
-            alt="Emenalo"
-          />
-          <h2 class="profile-list__text">Thelma</h2>
-        </a>
-        <a class="profile-list__item">
-          <img
-            class="profile-list__img"
-            src="assets/images/profile3.png"
-            alt="Emenalo"
-          />
-          <h2 class="profile-list__text">Onyeka</h2>
-        </a>
-        <a class="profile-list__item">
-          <img
-            class="profile-list__img"
-            src="assets/images/profile-kids.png"
-            alt="Emenalo"
-          />
-          <h2 class="profile-list__text">Kids</h2>
-        </a>
-        <a class="profile-list__item profile-list__item--add">
-          <img
-            class="profile-list__img"
-            src="assets/icons/plus-square.svg"
-            alt="Adicionar perfil"
-          />
-        </a>
-      </div>
-
-      <div class="profile-list--grid">
-        <a class="profile-list__item">
-          <img
-            class="profile-list__img profile-list__img--big"
-            src="assets/images/profile1.png"
-            alt="Emenalo"
-          />
-          <h2 class="profile-list__text">Emenalo</h2>
-        </a>
-        <a class="profile-list__item">
-          <img
-            class="profile-list__img profile-list__img--big"
-            src="assets/images/profile2.png"
-            alt="Emenalo"
-          />
-          <h2 class="profile-list__text">Thelma</h2>
-        </a>
-        <a class="profile-list__item">
-          <img
-            class="profile-list__img profile-list__img--big"
-            src="assets/images/profile3.png"
-            alt="Emenalo"
-          />
-          <h2 class="profile-list__text">Onyeka</h2>
-        </a>
-        <a class="profile-list__item">
-          <img
-            class="profile-list__img profile-list__img--big"
-            src="assets/images/profile-kids.png"
-            alt="Emenalo"
-          />
-          <h2 class="profile-list__text">Kids</h2>
-        </a>
-        <a class="profile-list__item profile-list__item--add-grid">
-          <img
-            class="profile-list__img"
-            src="assets/icons/plus-circle2.svg"
-            alt="Adicionar perfil"
-          />
-          <h2 class="profile-list__text">Add Profile</h2>
-        </a>
-      </div>
+    <div class="max-resolution">
+      <p class="max-resolution__text">
+        Opa, sua resolução de tela está muito grande!
+      </p>
+      <p class="max-resolution__text max-resolution__text--tablet">
+        Parece que você está usando um TABLET, tente acessar no celular
+      </p>
+      <p class="max-resolution__text max-resolution__text--desktop">
+        Parece que você está usando um NOTEBOOK, tente acessar no celular
+      </p>
     </div>
   </body>
 </html>
