feat: turn bottom navbar fixed

--- a/home.html
+++ b/home.html
@@ -225,29 +225,30 @@
 
       <div class="bottom-navbar__background">
         <div class="bottom-navbar">
-          <div class="bottom-navbar__button">
+          <a href="home.html" class="bottom-navbar__button">
             <img src="assets/icons/home-active.svg" alt="Home" />
             <p class="bottom-navbar__text bottom-navbar__text--active">Home</p>
-          </div>
-          <div class="bottom-navbar__button">
+          </a>
+          <a href="search.html" class="bottom-navbar__button">
             <img src="assets/icons/search.svg" alt="Pesquisa" />
             <p class="bottom-navbar__text">Search</p>
-          </div>
-          <div
+          </a>
+          <a
+            href="coming-soon.html"
             data-notification="4"
             class="bottom-navbar__button bottom-navbar__button--notification"
           >
             <img src="assets/icons/coming-soon.svg" alt="Em Breve" />
             <p class="bottom-navbar__text">Coming Soon</p>
-          </div>
-          <div class="bottom-navbar__button">
+          </a>
+          <a href="downloads.html" class="bottom-navbar__button">
             <img src="assets/icons/downloads.svg" alt="Downloads" />
             <p class="bottom-navbar__text">Downloads</p>
-          </div>
-          <div class="bottom-navbar__button">
+          </a>
+          <a href="more.html" class="bottom-navbar__button">
             <img src="assets/icons/more.svg" alt="Mais" />
             <p class="bottom-navbar__text">More</p>
-          </div>
+          </a>
         </div>
       </div>
     </div>
